set(SOURCES
	pack_arrays_swap.c
	pack_bounds_swap.c
	pack_bufferobject_swap.c
	pack_client_swap.c
	pack_clipplane_swap.c
	pack_fog_swap.c
	pack_lights_swap.c
	pack_materials_swap.c
	pack_matrices_swap.c
	pack_misc_swap.c
	pack_pixels_swap.c
	pack_point_swap.c
	pack_program_swap.c
	pack_regcombiner_swap.c
	pack_stipple_swap.c
	packer.c
	pack_arrays.c
	pack_bbox.c
	pack_beginend.c
	pack_bounds.c
	pack_buffer.c
	pack_bufferobject.c
	pack_client.c
	pack_clipplane.c
	pack_context.c
	pack_current.c
	pack_error.c
	pack_extensions.c
	pack_feedback.c
	pack_fence.c
	pack_fog.c
	pack_init.c
	pack_lights.c
	pack_lists.c
	pack_swap_lists.c
	pack_map.c
	pack_point.c
	pack_swap_map.c
	pack_misc.c
	pack_materials.c
	pack_matrices.c
	pack_pixels.c
	pack_pixelmap.c
	pack_swap_pixelmap.c
	pack_program.c
	pack_regcombiner.c
	pack_stipple.c
	pack_texture.c
	pack_swap_texture.c
)
set(GENERATED
	packer.def
	../include/cr_packfunctions.h
	../include/cr_opcodes.h
	../include/state/cr_currentpointers.h
	pack_bbox.c
	pack_current.c
	packer.c
	pack_arrays_swap.c
	pack_bounds_swap.c
	pack_bufferobject_swap.c
	pack_client_swap.c
	pack_clipplane_swap.c
	pack_fog_swap.c
	pack_lights_swap.c
	pack_materials_swap.c
	pack_matrices_swap.c
	pack_misc_swap.c
	pack_pixels_swap.c
	pack_point_swap.c
	pack_program_swap.c
	pack_regcombiner_swap.c
	pack_stipple_swap.c
)
# TODO: generate these files!


add_library(crpacker SHARED ${SOURCES})
target_link_libraries(crpacker crutil)
