add_subdirectory(arbfraglight)
add_subdirectory(atlantis)
add_subdirectory(bboxtest)
add_subdirectory(city)
add_subdirectory(cubes)
add_subdirectory(disttexture)
add_subdirectory(dlisttest)
add_subdirectory(extensions)
add_subdirectory(fonttest)
add_subdirectory(fraglight)
add_subdirectory(kirchner)
add_subdirectory(netperf)
add_subdirectory(nullapp)
add_subdirectory(packperf)
add_subdirectory(psubmit)
add_subdirectory(psubmit_crut)
add_subdirectory(retile)
add_subdirectory(spheres)
add_subdirectory(statecopytest)
add_subdirectory(stereocube)
add_subdirectory(tiletest)
add_subdirectory(viewports)
add_subdirectory(threadtest)
add_subdirectory(glx)
add_subdirectory(dlistperf1)
add_subdirectory(dlistperf2)
add_subdirectory(packertest)
