add_subdirectory(tester)
add_subdirectory(options)
add_subdirectory(error)
add_subdirectory(nop)
add_subdirectory(pack)
add_subdirectory(passthrough)
add_subdirectory(print)
add_subdirectory(readback)
add_subdirectory(render)
add_subdirectory(template)
add_subdirectory(tilesort)
add_subdirectory(saveframe)
add_subdirectory(comm)
add_subdirectory(array)
add_subdirectory(binaryswap)
add_subdirectory(hiddenline)
add_subdirectory(fps)
add_subdirectory(wet)
add_subdirectory(perf)
add_subdirectory(dist_texture)
add_subdirectory(feedback)
add_subdirectory(simplequery)
add_subdirectory(motionblur)
add_subdirectory(injector)
add_subdirectory(expando)
add_subdirectory(matte)
add_subdirectory(grabber)
add_subdirectory(apihistogram)
add_subdirectory(tracker)
add_subdirectory(windowtracker)
add_subdirectory(zpix)
